# kubestats

./: .gitignore  .mise.local.toml.example  LICENSE  README.md  docker-compose.yml  mise.toml
.cursor/: cursor_rules.yaml
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-entrypoint.sh  gunicorn.conf.py  pyproject.toml
backend/app/: celery_app.py  crud.py
backend/app/api/: main.py
backend/app/api/routes/: login.py  tasks.py  users.py
backend/app/core/: config.py
backend/app/tasks/: basic_tasks.py  discover_repositories.py
backend/app/tests/: conftest.py
backend/app/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/app/tests/tasks/: test_basic_tasks.py
backend/kubestats/: backend_pre_start.py  celery_app.py  crud.py  initial_data.py  main.py  models.py  tests_pre_start.py  worker.py
backend/kubestats/alembic/: env.py
backend/kubestats/alembic/versions/: 0c41c130bf05_add_last_scan_total_resources_to_.py  265415657ac3_add_ecosystemstats_table_for_daily_.py  4474483aa5b4_update_unique_constraint_to_include_.py  7909c4f554bd_.py  820997f91dcb_make_source_resource_id_nullable_for_.py  8885cc3523a8_add_blocked_and_pending_approval_sync_.py  a431674157c5_initial.py  da5d1e860c14_add_kubernetes_resources_count_to_.py  ea60b8e7bbfc_initial.py
backend/kubestats/api/: __init__.py  deps.py  health.py  main.py
backend/kubestats/api/routes/: admin.py  ecosystem.py  health.py  items.py  kubernetes.py  login.py  repositories.py  tasks.py  users.py
backend/kubestats/core/: config.py  db.py  github_client.py  security.py
backend/kubestats/core/yaml_scanner/: README.md  __init__.py  change_detector.py  models.py  parser.py  repository_scanner.py  resource_db_service.py  resource_extractor.py  scanner.py
backend/kubestats/tasks/: aggregate_ecosystem_stats.py  basic_tasks.py  discover_repositories.py  save_repository_metrics.py  scan_repositories.py  sync_repositories.py
backend/kubestats/tests/: conftest.py
backend/kubestats/tests/api/: test_health.py
backend/kubestats/tests/core/: __init__.py  test_github_client.py  test_yaml_scanner.py  test_yaml_scanner_flux_scanners.py  test_yaml_scanner_models.py  test_yaml_scanner_repository_scanner.py  test_yaml_scanner_resource_db_service.py  test_yaml_scanner_resource_scanners.py  (+1 more)
(+139 files in other folders)
